k8s/ch04/nginx-ingress-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
