k8s/ch04/custom-dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-dns
spec:
  containers:
    - name: custom-dns
      image: tomcat
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 8.8.8.8
    searches:
      - ns1.svc.cluster-domain.example
      - my.dns.search.suffix
    options:
      - name: ndots
        value: "2"
      - name: edns0
