k8s/ch04/nginx-hostnetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
