k8s/ch04/nginx-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 8080
  topologyKeys:
    - "kubernetes.io/hostname"
