k8s/ch04/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: webapp
