k8s/ch04/webapp-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  clusterIP: 10.0.171.239
  status:
    loadBalancer:
      ingress:
        - ip: 192.0.2.127
