k8s/ch04/webapp-nodeip.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 8081
  selector:
    app: webapp
